<resources>
    <string name="app_name">GoOm</string>
    <string name="gcm_defaultSenderId">461022901421</string>
    <string name="google_maps_key">AIzaSyCELwb_6eoiOB4qX6rglQDnz0XTHFbiONU</string>
    <string name="app_name_full">GOXEOM</string>
    <string name="character_colon">:</string>
    <string name="dialog_loading">Loading…</string>
    <string name="dialog_connection_fail">Connection is not responding, please try again</string>
    <string name="snackbar_nodrivernearby">No driver near by</string>
    <string name="colon_driver">Driver:</string>
    <string name="upcase_pick_your_service">PICK YOUR SERVICE</string>
    <string name="upcase_submit">SUBMIT</string>
    <string name="upcase_next">NEXT</string>
    <string name="upcase_details">DETAILS</string>
    <string name="upcase_payment">PAYMENT</string>
    <string name="upcase_order">ORDER</string>
    <string name="upcase_or">OR</string>
    <string name="upcase_book">BOOK</string>
    <string name="upcase_id">ID</string>
    <string name="upcase_from">FROM</string>
    <string name="upcase_to">TO</string>
    <string name="upcase_done">DONE</string>
    <string name="upcase_drivernearme">DRIVER NEAR ME</string>
    <string name="upcase_estimatecost">ESTIMATE COST</string>
    <string name="upcase_foodcost">FOOD COST</string>
    <string name="upcase_deliverycost">DELIVERY COST</string>
    <string name="upcase_total">TOTAL</string>
    <string name="upcase_bookingtime">BOOKING TIME</string>
    <string name="upcase_food">FOOD</string>
    <string name="upcase_sendsms">SEND SMS</string>
    <string name="upcase_call">CALL</string>
    <string name="upcase_driverinformation">DRIVER INFORMATION</string>
    <string name="upcase_bookingdetails">BOOKING DETAILS</string>
    <string name="upcase_login">LOGIN</string>
    <string name="upcase_inprocess">INPROCESS</string>
    <string name="upcase_completed">COMPLETED</string>
    <string name="upcase_uselocation">USE LOCATION</string>
    <string name="upcase_update">UPDATE</string>
    <string name="lowcase_confirm">Confirm</string>
    <string name="lowcase_ok">Ok</string>
    <string name="lowcase_your_location">Your Location</string>
    <string name="lowcase_search">Search</string>
    <string name="lowcase_total">Total</string>
    <string name="lowcase_price">Price</string>
    <string name="lowcase_payment">Payment</string>
    <string name="lowcase_email">Email</string>
    <string name="lowcase_name">Name</string>
    <string name="lowcase_phone">Phone</string>
    <string name="lowcase_password">Password</string>
    <string name="lowcase_age">Age</string>
    <string name="lowcase_gender">Gender</string>
    <string name="lowcase_male">Male</string>
    <string name="lowcase_female">Female</string>
    <string name="lowcase_order">Order</string>
    <string name="lowcase_addnote">Add Note</string>
    <string name="lowcase_doubleclickmaptozoom">Double click map to Zoom In</string>
    <string name="lowcase_menu">Menu</string>
    <string name="lowcase_items">Items</string>
    <string name="lowcase_username">Username</string>
    <string name="lowcase_showpassword">Show Password</string>
    <string name="lowcase_cancelbooking">Cancel Booking</string>
    <string name="lowcase_clear">Clear</string>
    <string name="lowcase_note">Note</string>
    <string name="lowcase_login">Login</string>
    <string name="lowcase_signup">Sign Up</string>
    <string name="lowcase_cancel">Cancel</string>
    <string name="lowcase_profile">Profile</string>
    <string name="lowcase_nopickeddriver">No Picked Driver</string>
    <string name="lowcase_changepassword">Change Password</string>
    <string name="lowcase_fullname">Fullname</string>
    <string name="lowcase_yes">Yes</string>
    <string name="lowcase_no">No</string>
    <string name="lowcase_save">Save</string>
    <string name="lowcase_birthday">Birthday</string>
    <string name="settings_tab_title">Settings</string>
    <string name="history_tab_title">History</string>
    <string name="order_tab_title">Order</string>
    <string name="wallet_tab_title">Wallet</string>
    <string name="fragment_history_list_title">MY BOOKING HISTORY</string>
    <string name="activity_history_detail_title">MY BOOKING</string>
    <string name="activity_history_detail_ontheway">YOUR DRIVER ON THE WAY TO</string>
    <string name="fragment_wallet_title">MY WALLET</string>
    <string name="fragment_wallet_text1">Welcome to GOXEOM credit - Your - in - app Wallet!</string>
    <string name="fragment_wallet_text2">Here you can redeem vouchers, and go cashless</string>
    <string name="fragment_wallet_text3">YOUR GOXEOM CREDIT 1.000.0… VND</string>
    <string name="fragment_wallet_text4">Share your referral code \"148498484984\" to give your friends 50.000 VND credit for first time use GOXEOM. When they book, you will get 50.000 VND too! Keep spreading the GOXEOM love!</string>
    <string name="fragment_wallet_hint_code">Voucher Code/Referral Code</string>
    <string name="fragment_wallet_button_topup">TOP-UP</string>
    <string name="fragment_wallet_button_share">SHARE</string>
    <string name="fragment_wallet_button_ok">OK</string>
    <string name="fragment_toup_title">TOP-UP</string>
    <string name="fragment_toup_text1">If you want top-up your GOXEOM credit via bank transfer</string>
    <string name="fragment_toup_text2">HERE IS HOW TO DO IT!</string>
    <string name="fragment_toup_text_step1">1. Make online transfer to GOXEOM Account No: 5233498082 (Min: 100.000 VND)</string>
    <string name="fragment_toup_text_step2">2. Fill in top Up Form bellow</string>
    <string name="fragment_toup_text_step3">3. After me validate your Top Up, GOXEOM Credit will be automatically added to your in app wallet</string>
    <string name="fragment_toup_bankaccount">Bank - Account</string>
    <string name="fragment_toup_hint_bankaccountholdername">Bank Account Holder Name</string>
    <string name="fragment_toup_hint_bankname">Bank Name</string>
    <string name="fragment_toup_hint_accounttransfer">Amount Transfer</string>
    <string name="fragment_toup_scratchcard">Scratch Card</string>
    <string name="fragment_toup_hint_inputserialnumber">Input Serial Number</string>
    <string name="fragment_settings_signup">Sign Up</string>
    <string name="fragment_settings_termsofservice">Terms of Service</string>
    <string name="fragment_settings_ratethisapp">Rate this app</string>
    <string name="fragment_settings_callus">Call Us (GOXEOM Phone number)</string>
    <string name="fragment_order_instantcourier">INSTANT COURIER</string>
    <string name="fragment_order_food">FOOD</string>
    <string name="fragment_order_transport">TRANSPORT</string>
    <string name="fragment_order_shopping">SHOPPING</string>
    <string name="activity_settings_signup_alreadyaccount">Already Account?</string>
    <string name="activity_settings_signup_loginnow">Login Now!</string>
    <string name="activity_settings_signup_verify_text1">An SMS with a verification code was sent to your phone</string>
    <string name="activity_settings_signup_vefify_didntreceiveansms">Didn\'t receive an SMS</string>
    <string name="activity_settings_signup_verify_resendsms">Resend SMS</string>
    <string name="activity_settings_signup_verify_hinh_verificationcode">Verification Code</string>
    <string name="activity_order_courier_title">INSTANT COURIER</string>
    <string name="activity_order_courier_pickalocation">Pick a Location</string>
    <string name="activity_order_courier_streetbuildingname">Street / Building Name</string>
    <string name="activity_order_courier_locationdetails">Location details</string>
    <string name="activity_order_courier_housenofloorlandmark">House No. / Floor / Landmard</string>
    <string name="activity_order_courier_contactperson">Contact person</string>
    <string name="activity_order_courier_inputifyouarenotthesender">Input if you are not the sender</string>
    <string name="activity_order_courier_itemstodeliver">ITEMS TO DELIVER</string>
    <string name="activity_order_transport_title">TRANSPORT</string>
    <string name="activity_order_shopping_title">SHOPPING</string>
    <string name="activity_order_shopping_shoplocationdetails">Shop Location details</string>
    <string name="activity_order_shopping_shopnamefloorlandmark">Shop Name. / Floor / Landmark</string>
    <string name="activity_order_shopping_itemstobuy">Items to Buy</string>
    <string name="activity_order_shopping_pleasestatequantily">Please state quantily</string>
    <string name="activity_order_shopping_estimatedcost">Estimated Cost</string>
    <string name="activity_order_food_button_category">Category</string>
    <string name="activity_order_food_button_nearme">Near Me</string>
    <string name="activity_order_food_searchrestaurant">Search Restaurant</string>
    <string name="activity_order_pickcontact_title">PICK CONTACT PERSON</string>
    <string name="activity_order_pickcontact_addfromcontacts">ADD FROM CONTACTS</string>
    <string name="activity_order_pickdriver_title">DRIVER</string>
    <string name="activity_order_picklocation_title">PICK LOCATION</string>
    <string name="activity_order_picklocation_button_openlocation">OPEN LOCATION</string>
    <string name="activity_order_picklocation_button_currentlocation">CURRENT LOCATION</string>
    <string name="activity_order_picklocation_myhistory">MY HISTORY</string>
    <string name="activity_order_confirm_title">CONFIRM</string>
    <string name="activity_order_made_title">BOOKING MADE</string>
    <string name="activity_order_made_text1">We will notify you when we find you a driver</string>
    <string name="activity_order_made_bookingtime">Booking time:</string>
    <string name="activity_order_made_text2">DO YOU KNOW</string>
    <string name="activity_order_made_text3">All transport booking comes with free hair cover and masker</string>
    <string name="activity_order_made_button_cancelbooking">CANCEL BOOKING</string>
    <string name="activity_order_made_button_newbooking">NEW BOOKING</string>
    <string name="activity_order_food_ordered_title">ORDERED</string>
    <string name="activity_order_food_ordered_pickupnow">Pick up now!</string>
    <string name="list_item_location_history_datetime">Datetime:</string>
    <string name="list_item_location_history_address">Address:</string>
    <string name="activity_settings_signup_error_phone_length">Phone number length mustn\'t be more than 11</string>
    <string name="activity_settings_signup_error_confirm">Please check your password confirmation carefully</string>
    <string name="activity_settings_signup_dialog_success">Sign Up Successfully</string>
    <string name="activity_settings_signup_error_email_empty">Please insert email address</string>
    <string name="activity_settings_signup_error_phone_empty">Please insert phone number</string>
    <string name="activity_settings_signup_error_username_empty">Please insert username</string>
    <string name="activity_settings_signup_error_username_exist">This username is already exist</string>
    <string name="activity_settings_signup_error_email_exist">This email is already exist</string>
    <string name="activity_settings_signup_error_phone_exist">This phone number is already exist</string>
    <string name="activity_settings_signup_error_password_empty">Please insert password</string>
    <string name="activity_settings_signup_error_confirm_empty">Please confirm your password</string>
    <string name="activity_settings_login_dialog_success">Login Successfully</string>
    <string name="activity_settings_login_error_wrongpassword">Wrong password</string>
    <string name="activity_settings_login_error_username_notexist">This username isn\'t exist</string>
    <string name="dialog_pleaseloginsignup">Please login or signup</string>
    <string name="activity_settings_profile_logoutaccount">Logout Account</string>
</resources>