<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mAppBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name_full"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mDarkGreen"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/upcase_pick_your_service"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/activity_settings_signup_verify_text1"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_verify" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/activity_settings_signup_verify_hinh_verificationcode"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_green_button"
                android:text="@string/upcase_submit"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_settings_signup_vefify_didntreceiveansms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/mBlackText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_settings_signup_verify_resendsms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/mDarkGreen" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
