<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tab_container"
    android:background="@color/mAppBackground"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_wallet_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/mBlackText"
            android:textStyle="bold"/>

        <View style="@style/Divider"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/mBlackText"
                    android:text="@string/fragment_wallet_text1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/mBlackText"
                    android:text="@string/fragment_wallet_text2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/mBlackText"
                    android:text="@string/fragment_wallet_text3" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_green_button"
                    android:textColor="#FFFFFF"
                    android:text="@string/fragment_wallet_button_topup"
                    android:id="@+id/btnTopup"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/mBlackText"
                    android:text="@string/fragment_wallet_text4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_green_button"
                    android:textColor="#FFFFFF"
                    android:text="@string/fragment_wallet_button_share"
                    android:id="@+id/btnShare"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:weightSum="10">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/edtCode"
                        android:hint="@string/fragment_wallet_hint_code"
                        android:gravity="center"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_green_button"
                        android:textColor="#FFFFFF"
                        android:text="@string/fragment_wallet_button_ok"
                        android:id="@+id/btnOk"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
