<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_vertical"
    android:background="@color/mAppBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name_full"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mDarkGreen"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/upcase_pick_your_service"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:layout_weight="0.7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/logo_goxeom"
        android:contentDescription="@string/app_name" />

</LinearLayout>
