<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mAppBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lowcase_menu"
            android:textColor="@color/mBlackText"
            android:textStyle="bold" />

        <View style="@style/Divider" />

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lvFood"
            android:divider="@color/mBlackDivider"
            android:dividerHeight="1px"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@color/mIndigo"
            android:padding="10dp">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/upcase_estimatecost"
                    android:textStyle="bold"
                    android:textColor="@color/mAppBackground"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="(1 Items) Price: 50.0..."
                    android:textColor="@color/mAppBackground"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnOrder"
                android:padding="5dp"
                style="@style/SmallGreenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowcase_order" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
